--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,29 +1,43 @@
 body{
     margin: 0px;
     text-align: center;
+    font-family: cursive;
 }
 
 h1{
     margin-top: 0px;
+    font-size: 5.625rem;
+    margin: 50px auto 0 auto;
+    color: #66BFBF;
+}
+
+h2{
+    font-size: 2.5rem;
+    color: #66BFBF;
+    font-weight: normal;
+}
+
+h3{
+    color: #11999E;
 }
 
 .top-container{
-    background-color: #F8EDE3;
+    background-color: #E4F9F5;
     position: relative;
     padding-top: 100px;
 
 }
 
 .middle-container{
-    background-color: red;
-    height: 200px;
-    width: 200px;
+
+
+
 }
 
 .bottom-container{
-    background-color: yellow;
-    height: 200px;
-    width: 200px;
+
+    
+
 }
 
 .bottom-cloud{
@@ -36,4 +50,33 @@ h1{
     position: absolute;
     right: 300px;
     top: 50px;
+}
+
+.profilePicture {
+    height: 200px;
+    width: 100px;
+}
+
+a{
+    color: #11999E;
+}
+
+.skill-row{
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;
+    line-height: 2;
+    
+}
+
+.chili-img{
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+}
+
+.computer-img{
+    width: 25%;
+    float: left;
+    margin-right: 30px;
 }
